<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/home_head"/>
<RelativeLayout
    xmlns:circle="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CircleMenuMainActivity" >

    <com.circlemenu.CircleLayout
    android:id="@+id/main_circle_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_above="@+id/main_selected_textView"
    android:layout_gravity="center_horizontal"
    circle:firstChildPosition="South"
    circle:rotateToCenter="true"
    circle:isRotating="true" >
    <!--         circle:circleBackground="@drawable/green"  > -->


    <com.circlemenu.CircleImageView
        android:id="@+id/monday_image"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_launcher"
        circle:name="@string/monday" />

        <com.circlemenu.CircleImageView
            android:id="@+id/friday_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            circle:name="@string/friday" />


    <com.circlemenu.CircleImageView
        android:id="@+id/thursday_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        circle:name="@string/thursday" />

    <com.circlemenu.CircleImageView
            android:id="@+id/wednesday_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            circle:name="@string/wednesday" />

    <com.circlemenu.CircleImageView
            android:id="@+id/tuesday_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher"
            circle:name="@string/tuesday" />


   <!-- <com.circlemenu.CircleImageView
        android:id="@+id/saturday_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        circle:name="@string/action_left"/>-->

   <!-- <com.circlemenu.CircleImageView
        android:id="@+id/sunday_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher"
        circle:name="@string/action_left"/>-->
</com.circlemenu.CircleLayout>

    <TextView
        android:id="@+id/main_selected_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:textColor="#51d5d5"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>

</LinearLayout>