<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ebm="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:background="#ffffff"
    android:layout_height="fill_parent" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1" />

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="65dp"
                />
        </LinearLayout>
    </TabHost>



    <lt.lemonlabs.android.expandablebuttonmenu.ExpandableMenuOverlay
        android:id="@+id/button_menu"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:src="@drawable/menu_open"
        ebm:dimAmount="0.8"

        ebm:mainButtonSize="0.13"
        ebm:otherButtonSize="0.12"
        ebm:distanceY="0.4"
        ebm:distanceX="0.28"
        ebm:bottomPad="0.001"


        ebm:closeButtonSrc="@drawable/menu_close"
        ebm:leftButtonSrc="@drawable/circle_1"
        ebm:midButtonSrc="@drawable/circle_2"
        ebm:rightButtonSrc="@drawable/circle_3"

        ebm:leftButtonText="@string/action_left"
        ebm:midButtonText="@string/action_mid"
        ebm:rightButtonText="@string/action_right"/>



    <com.mainphoto.PullDoorView
        android:id="@+id/myImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ddd" >

        <TextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16dp"
            android:text="上滑可以进入首页"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </com.mainphoto.PullDoorView>

</RelativeLayout>